--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "body-parser": "^1.19.0"
+    "express": "^4.17.1"
   }
 }
